# cnn-lstm-transformer-text-classification

./: .gitignore  LICENSE  README.md  README.zh-CN.md
Beamer/: 文本分类.bib  文本分类.tex  模版.cls
Beamer/fig/: Nonlinear-CNN-top-and-the-proposed-substitute-Spectral-CNN-Linear-Counterpart-SCLC.ppm  Thumbs.db
Code/: README.md  pyproject.toml
Code/results/ag_news/metrics/: BiLSTM_ag_news_best_metrics.csv  CNN_ag_news_best_metrics.csv  Transformer_ag_news_best_metrics.csv  comparison_ag_news.csv
Code/results/bbc/metrics/: BiLSTM_bbc_best_metrics.csv  CNN_bbc_best_metrics.csv  Transformer_bbc_best_metrics.csv  comparison_bbc.csv
Code/results/imdb/metrics/: BiLSTM_imdb_best_metrics.csv  CNN_imdb_best_metrics.csv  Transformer_imdb_best_metrics.csv  comparison_imdb.csv
Code/results/sst5/metrics/: BiLSTM_sst5_best_metrics.csv  CNN_sst5_best_metrics.csv  Transformer_sst5_best_metrics.csv  comparison_sst5.csv
Code/src/: __init__.py  config.py  train_all.py  train_bilstm.py  train_cnn.py  train_transformer.py  training.py
Code/src/data/: embeddings.py  loader.py  preprocessor.py
Code/src/models/: base.py  bilstm.py  cnn.py  transformer.py
Code/src/utils/: metrics.py  trainer.py
